--- a/lag_helper_jupyter.ipynb
+++ b/lag_helper_jupyter.ipynb
@@ -17,8 +17,8 @@
     "1. The eigenvectors, eigenvalues and multiplicities.  \n",
     "2. The characteristic polynomial.\n",
     "3. Interactive minimal polynomial calculator.\n",
-    "4. JCF and RCF Helper (Doesn't actually find RCF)\n",
-    "5. Gram Schmidt\n",
+    "4. JCF and RCF Helper (Doesn't actually find RCF).\n",
+    "5. Gram Schmidt.\n",
     "\n",
     "\n"
    ]
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "9cf60afd",
    "metadata": {},
    "outputs": [],
@@ -87,7 +87,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "main()"
+    "A = input_matrix()\n",
+    "main(A)"
    ]
   },
   {
@@ -102,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "id": "ff6a3884",
    "metadata": {},
    "outputs": [
@@ -134,21 +135,79 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n"
+      "\n",
+      "Input each row as a space seperated list of the elements.\n",
+      "E.g: 1 0 0 0 -1 0\n"
      ]
     },
     {
-     "ename": "ValueError",
-     "evalue": "invalid literal for int() with base 10: ''",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_504318/1553725802.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mgram_schmidt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/Projects/Lag_Helper/lag_helper_functions.py\u001b[0m in \u001b[0;36mgram_schmidt\u001b[0;34m()\u001b[0m\n\u001b[1;32m     68\u001b[0m     \u001b[0mdisplay\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mMarkdown\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"------------------------------\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     69\u001b[0m     \u001b[0mdisplay\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mMarkdown\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"### Input Matrix of Vectors\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 70\u001b[0;31m     \u001b[0mA\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minput_matrix\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     71\u001b[0m     \u001b[0mdisplay\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mA\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     72\u001b[0m     \u001b[0mdisplay\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mMarkdown\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Input Vectors\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/Projects/Lag_Helper/lag_helper_functions.py\u001b[0m in \u001b[0;36minput_matrix\u001b[0;34m()\u001b[0m\n\u001b[1;32m     19\u001b[0m     \"\"\"\n\u001b[1;32m     20\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 21\u001b[0;31m     \u001b[0mn\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"No. Rows: \"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     22\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Input each row as a space seperated list of the elements.\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     23\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"E.g: 1 0 0 0 -1 0\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: invalid literal for int() with base 10: ''"
-     ]
+     "data": {
+      "text/plain": [
+       "⎡1  0⎤\n",
+       "⎢    ⎥\n",
+       "⎣0  1⎦"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "Input Vectors"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "⎡⎡1⎤  ⎡0⎤⎤\n",
+       "⎢⎢ ⎥, ⎢ ⎥⎥\n",
+       "⎣⎣0⎦  ⎣1⎦⎦"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "------------------------------"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "### Orthonormalized Basis Vectors"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "⎡⎡1⎤  ⎡0⎤⎤\n",
+       "⎢⎢ ⎥, ⎢ ⎥⎥\n",
+       "⎣⎣0⎦  ⎣1⎦⎦"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -156,12 +215,114 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "97ed53d7",
+   "cell_type": "markdown",
+   "id": "84025590",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### CASIO fx-CG420\n",
+    "Freeform calculator. User can input their own matrix operations,"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "bfc31d16",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Input each row as a space seperated list of the elements.\n",
+      "E.g: 1 0 0 0 -1 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "A = input_matrix()\n",
+    "display(A)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0e9bf88c",
+   "metadata": {},
+   "source": [
+    "#### Examples\n",
+    "See [Sympy Documentation](https://docs.sympy.org/latest/modules/matrices/index.html) for possible operations.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "8c1e8c60",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = sp.symbols('x')\n",
+    "n = A.shape[0]\n",
+    "#----------------------------------------------------------------------\n",
+    "# Rank example\n",
+    "(A**2 + A - sp.eye(n)).rank()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "755393cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Nullspace of a Matrix example\n",
+    "A.nullspace()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "70ad81a2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "⎛⎡1  0⎤        ⎞\n",
+       "⎜⎢    ⎥, (0, 1)⎟\n",
+       "⎝⎣0  1⎦        ⎠"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Reduce to RREF\n",
+    "A.rref()"
+   ]
   }
  ],
  "metadata": {
