--- a/lag_helper_jupyter.ipynb
+++ b/lag_helper_jupyter.ipynb
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "9cf60afd",
    "metadata": {},
    "outputs": [],
@@ -82,10 +82,345 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "204d9662",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Input each row as a space seperated list of the elements.\n",
+      "E.g: 1 0 0 0 -1 0\n"
+     ]
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "------------------------------"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "### Input Matrix"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "⎡1  0  -1⎤\n",
+       "⎢        ⎥\n",
+       "⎢0  2  3 ⎥\n",
+       "⎢        ⎥\n",
+       "⎣0  1  0 ⎦"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "------------------------------"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "### Eigenvectors and Eigenvalues"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(eigenvalue, algebraic_multiplicity, [eigenvectors])\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "⎡⎛       ⎡⎡1/2⎤⎤⎞  ⎛      ⎡⎡1⎤⎤⎞  ⎛      ⎡⎡-1/2⎤⎤⎞⎤\n",
+       "⎢⎜       ⎢⎢   ⎥⎥⎟  ⎜      ⎢⎢ ⎥⎥⎟  ⎜      ⎢⎢    ⎥⎥⎟⎥\n",
+       "⎢⎜-1, 1, ⎢⎢-1 ⎥⎥⎟, ⎜1, 1, ⎢⎢0⎥⎥⎟, ⎜3, 1, ⎢⎢ 3  ⎥⎥⎟⎥\n",
+       "⎢⎜       ⎢⎢   ⎥⎥⎟  ⎜      ⎢⎢ ⎥⎥⎟  ⎜      ⎢⎢    ⎥⎥⎟⎥\n",
+       "⎣⎝       ⎣⎣ 1 ⎦⎦⎠  ⎝      ⎣⎣0⎦⎦⎠  ⎝      ⎣⎣ 1  ⎦⎦⎠⎦"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "Characteristic Polynomial Expanded: $x^3 - 3x^2 - x + 3$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "Characteristic Polynomial Factorized: $(x - 3)(x - 1)(x + 1)$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "------------------------------"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "### Interactive Minimal Polynomial Finder"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "Vary sliders until the zero matrix is produced."
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "Note: the number of sliders are hard coded so depending on the number of factors, some sliders won't do anything."
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5e418945b62246728d73395a491889de",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(IntSlider(value=1, description='n_1', max=1, min=1), IntSlider(value=1, description='n_2…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "------------------------------"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "### Jordan Canonical Form"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "$P^-1 A P = J$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "⎡⎡0  -1/4  3/4 ⎤  ⎡1  0  -1⎤  ⎡1/2  1  -1/2⎤  ⎡-1  0  0⎤⎤\n",
+       "⎢⎢             ⎥  ⎢        ⎥  ⎢            ⎥  ⎢        ⎥⎥\n",
+       "⎢⎢1  1/4   -1/4⎥, ⎢0  2  3 ⎥, ⎢-1   0   3  ⎥, ⎢0   1  0⎥⎥\n",
+       "⎢⎢             ⎥  ⎢        ⎥  ⎢            ⎥  ⎢        ⎥⎥\n",
+       "⎣⎣0  1/4   1/4 ⎦  ⎣0  1  0 ⎦  ⎣ 1   0   1  ⎦  ⎣0   0  3⎦⎦"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "##### Jordan Basis"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "⎡⎡1/2⎤  ⎡1⎤  ⎡-1/2⎤⎤\n",
+       "⎢⎢   ⎥  ⎢ ⎥  ⎢    ⎥⎥\n",
+       "⎢⎢-1 ⎥, ⎢0⎥, ⎢ 3  ⎥⎥\n",
+       "⎢⎢   ⎥  ⎢ ⎥  ⎢    ⎥⎥\n",
+       "⎣⎣ 1 ⎦  ⎣0⎦  ⎣ 1  ⎦⎦"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "------------------------------"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "### Ranks of $f_i(A)$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "Where $f_i$ are factors of the minimal poly."
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "Useful for Rational Canonical Form."
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "Rank of $(A - 3) = 2$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "Rank of $(A - 1) = 2$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "Rank of $(A + 1) = 2$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "A = input_matrix()\n",
     "main(A)"
@@ -225,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 82,
    "id": "bfc31d16",
    "metadata": {},
    "outputs": [
@@ -237,6 +572,17 @@
       "Input each row as a space seperated list of the elements.\n",
       "E.g: 1 0 0 0 -1 0\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "⎡2   i⎤\n",
+       "⎢     ⎥\n",
+       "⎣-i  2⎦"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -255,17 +601,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "8c1e8c60",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2"
+       "4"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,41 +626,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "755393cd",
+   "execution_count": null,
+   "id": "9656f435",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[]"
+       "⎡⎡-1/6⎤  ⎡1/6 ⎤⎤\n",
+       "⎢⎢    ⎥  ⎢    ⎥⎥\n",
+       "⎢⎢1/6 ⎥  ⎢-7/6⎥⎥\n",
+       "⎢⎢    ⎥, ⎢    ⎥⎥\n",
+       "⎢⎢ 1  ⎥  ⎢ 0  ⎥⎥\n",
+       "⎢⎢    ⎥  ⎢    ⎥⎥\n",
+       "⎣⎣ 0  ⎦  ⎣ 1  ⎦⎦"
       ]
      },
-     "execution_count": 14,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "# Nullspace of a Matrix example\n",
-    "A.nullspace()"
+    "# Kernel example, particularly useful for primary decomp\n",
+    "((A-2*sp.eye(A.shape[0]))**2).nullspace()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 77,
    "id": "70ad81a2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "⎛⎡1  0⎤        ⎞\n",
-       "⎜⎢    ⎥, (0, 1)⎟\n",
-       "⎝⎣0  1⎦        ⎠"
+       "⎛⎡1  0  0  0⎤              ⎞\n",
+       "⎜⎢          ⎥              ⎟\n",
+       "⎜⎢0  1  0  0⎥              ⎟\n",
+       "⎜⎢          ⎥, (0, 1, 2, 3)⎟\n",
+       "⎜⎢0  0  1  0⎥              ⎟\n",
+       "⎜⎢          ⎥              ⎟\n",
+       "⎝⎣0  0  0  1⎦              ⎠"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,6 +678,105 @@
     "# Reduce to RREF\n",
     "A.rref()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "831443a1",
+   "metadata": {},
+   "source": [
+    "#### Polynomial Examples"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "d1524a12",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "        ⎛ 3        ⎞ ⎛ 3    2    ⎞\n",
+       "(x + 1)⋅⎝x  + x + 1⎠⋅⎝x  + x  + 1⎠"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Factoring polynomials over finite fields\n",
+    "x = sp.symbols('x')\n",
+    "sp.factor(x**7 - 1, modulus=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "58b7b426",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "x + 2"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       " 6    5      4      3       2          \n",
+       "x  + x  - 7⋅x  - 5⋅x  + 14⋅x  + 4⋅x - 8"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# lcm and gcd examples\n",
+    "x = sp.symbols('x')\n",
+    "f = x**4 + 2*x**3 -3*x**2 - 4*x + 4\n",
+    "g = x**3 + x**2 -4*x - 4\n",
+    "display(sp.gcd(f,g))\n",
+    "display(sp.lcm(f,g))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "30a96177",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "⎡    1   √11⋅ⅈ  1   √11⋅ⅈ⎤\n",
+       "⎢-1, ─ - ─────, ─ + ─────⎥\n",
+       "⎣    2     2    2     2  ⎦"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Solving for x\n",
+    "sp.solve(x**3 + 2*x + 3, x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c6bc306a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
